--- a/Rentcar_Project1/src/main/webapp/css/header.css
+++ b/Rentcar_Project1/src/main/webapp/css/header.css
@@ -9,6 +9,7 @@ body{
 	position: relative;
 	padding-top:30px;
 	padding-bottom: 3.5%;
+	background-color: #fbfbfb;
 }
 header{
 	margin-top:5px;
@@ -16,22 +17,60 @@ header{
 	top : 0;
 	left : 0;
 	width: 100%;
+	height: 3%;
 	/* border: 1px solid black; */
 	margin-bottom: 30px;
 }
+th{
+	padding: 10px;
+	border-bottom: 1px solid black;
+}
 header > div{
+	height:100%;
 	display:flex;
-	background-color: red;
+	background-color: white;
 	text-align: center;
+	background-color: transparent;
+}
+header > div > span{
+	display: block;
+	width:0;
+	height: 100%;
+	box-sizing: border-box;
+	margin-left: 10px;
+	transition : 1.5s;
+}
+header > div > span > img{
+	height: 100%;
+	width:100%;
+	object-fit: fill;
+	box-sizing: border-box;
 }
 header > div > button{
 	flex:1;
+	border-radius: 5px;
+	background-color: #e7e7e9;
+	border : 1px solid white;
+	padding: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
+	transition:1.3s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+header > div > button:hover{
+	background-color: #f9e9f1;
+	border: 1px solid #f9f9f9;
 }
 main{
 	display: flex;
 	flex-direction:column;
 	width:100%;
 	overflow: hidden;
+	padding:50px;
+	box-sizing: border-box;
+	
 }
 main > div {
 	display:flex;
@@ -43,8 +82,9 @@ main > div {
 }
 main > div > img {
 	width:100%;
-	height:150px;
+	height:300px;
 	box-sizing: border-box;
+	transition:1.3s;
 }
 table{
 	width: 100%;
@@ -52,13 +92,18 @@ table{
 	text-align: center;
 	height: 100%;
 	table-layout: auto;
-	padding: 10px;
+	 box-sizing: border-box;
 }
 td > img{
 	width:100%;
 	max-width:150px;
 	box-sizing: border-box;
 	transition: 1.2s;
+	-webkit-user-drag: none;
+ -khtml-user-drag: none;
+ -moz-user-drag: none;
+ -o-user-drag: none;
+ user-drag: none;
 }
 td{
 	overflow: hidden;
@@ -68,7 +113,6 @@ td > img:hover {
 }
 
 .login_main{
-	border:1px solid green;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -79,5 +123,30 @@ td > img:hover {
 .login_main > form {
 	width:100%;
 	height : 100%;
-	border:1px solid red;
+	border:1px solid #e9e9e9;
+	border-radius: 5px;
+	box-shadow: 2px 1px 0 0 black;
 }
+.category_select{
+	padding:10px;
+	justify-content: end;
+	padding-right: 3%;
+	box-sizing: border-box;
+	transition: all 0.6s;
+}
+.car_table{
+	transition: all 1.3s;
+	border: 1px solid black;
+	border-radius: 5px;
+	box-sizing: border-box;
+}
+.numInputWrapper:last-child{
+	display: none;	
+}
+.flatpickr-time-separator{
+	display: none;
+}
+.startH_td,.endH_td{
+	visibility: hidden;
+}
+
