--- a/Rentcar_Project1/src/main/webapp/css/CarReserve.css
+++ b/Rentcar_Project1/src/main/webapp/css/CarReserve.css
@@ -30,13 +30,13 @@
 	flex:6;
 	overflow: auto;
 }
+
 .CarReserve_table > tbody > tr:nth-child(n+6){
 	flex:0;
 }
 .CarReserve_table > tbody > tr > td{
 	flex:1;
 	width: 100%;
-	overflow: hidden;
 }
 
 td.total_price{
@@ -62,4 +62,7 @@ td.total_price{
 	width:100%;
 	height: 0px;
 	transition : 1.3s;
+}
+td:has(table){
+	overflow: auto;
 }
